bpy.ops.transform.rotate() seems to ignore center_override when Bezier control points are selected #85823

Closed
opened 2021-02-20 17:43:42 +01:00 by David Hill · 5 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 960

Blender Version
Broken: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: b1142858d4, type: Release

Short description of error
With Bezier control point selected, bpy.ops.transform.rotate() seems to ignore center_override optionUpdate:
SplineCenterOverride.txt

Exact steps for others to reproduce the error
Run following script, both curves are the same

import bpy
import math
from mathutils import Vector 

# Create Bezier, select last control point, rotate about (0.0,1.0,0.0) using center_override option

bpy.ops.curve.primitive_bezier_curve_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0))

bpy.ops.object.editmode_toggle()
bpy.ops.curve.select_all(action='DESELECT')
bpy.context.selected_objects[0].data.splines[0].bezier_points[1].select_control_point = True

center = Vector([0.0,1.0,0.0])

bpy.ops.transform.rotate(value=.3, orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', constraint_axis=(False, False, True), mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False, center_override=(center))




# Create Bezier, select last control point, rotate without using center_override option

bpy.ops.object.editmode_toggle()

bpy.ops.curve.primitive_bezier_curve_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0))

bpy.ops.object.editmode_toggle()
bpy.ops.curve.select_all(action='DESELECT')
bpy.context.selected_objects[0].data.splines[0].bezier_points[1].select_control_point = True

bpy.ops.transform.rotate(value=.3, orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', constraint_axis=(False, False, True), mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False)

bpy.ops.object.editmode_toggle()

Update:
Constrain axis needs to be changed in the original uploaded file. I made the change in the script included in the text. Should be (False, False, True).
SplineCenterOverride_Updated.txt

**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce GTX 960 **Blender Version** Broken: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: b1142858d4ca, type: Release **Short description of error** With Bezier control point selected, bpy.ops.transform.rotate() seems to ignore center_override optionUpdate: [SplineCenterOverride.txt](https://archive.blender.org/developer/F9822073/SplineCenterOverride.txt) **Exact steps for others to reproduce the error** Run following script, both curves are the same ``` import bpy import math from mathutils import Vector # Create Bezier, select last control point, rotate about (0.0,1.0,0.0) using center_override option bpy.ops.curve.primitive_bezier_curve_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0)) bpy.ops.object.editmode_toggle() bpy.ops.curve.select_all(action='DESELECT') bpy.context.selected_objects[0].data.splines[0].bezier_points[1].select_control_point = True center = Vector([0.0,1.0,0.0]) bpy.ops.transform.rotate(value=.3, orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', constraint_axis=(False, False, True), mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False, center_override=(center)) # Create Bezier, select last control point, rotate without using center_override option bpy.ops.object.editmode_toggle() bpy.ops.curve.primitive_bezier_curve_add(radius=1, enter_editmode=False, align='WORLD', location=(0, 0, 0)) bpy.ops.object.editmode_toggle() bpy.ops.curve.select_all(action='DESELECT') bpy.context.selected_objects[0].data.splines[0].bezier_points[1].select_control_point = True bpy.ops.transform.rotate(value=.3, orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', constraint_axis=(False, False, True), mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False) bpy.ops.object.editmode_toggle() ``` --- **Update:** Constrain axis needs to be changed in the original uploaded file. I made the change in the script included in the text. Should be (False, False, True). [SplineCenterOverride_Updated.txt](https://archive.blender.org/developer/F9827694/SplineCenterOverride_Updated.txt)
Author

Added subscriber: @davidwhill

Added subscriber: @davidwhill

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 201ab7c540

This issue was referenced by 201ab7c54025afc42570ce3df3d2bb7f37fe36be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-02-24 20:20:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85823
No description provided.